--- a/style.css
+++ b/style.css
@@ -17,13 +17,17 @@ h1{
 
 section{
  display: flex;
+ margin-bottom: 100px;
 }
 
 .helf-width{
     width: 50%;
     padding-left:20px;
 }
-.helf-width img {
+.top-inro{
+    margin-left: 50px;
+}
+.top-img {
     width:60%;
     height: 85%;
     margin: 40px;
@@ -35,6 +39,7 @@ section{
 .description{
     padding-top: 40px;
     padding-bottom: 40px;
+    text-align: justify;
 }
 .btn{
     text-decoration: none;
@@ -49,4 +54,22 @@ section{
 background-image: url(images/bg.png);
 background-repeat: no-repeat;
 
+}
+.drem-img{
+width: 90%;
+padding-left: 30px;
+}
+.dream-section{
+margin: 30px;
+background-image: url(images/shape.png);
+background-repeat:no-repeat;
+background-position: right;
+background-size: 100px;
+}
+.dream-intro{
+    margin-left: 30px;
+}
+.dream-p{
+    margin-right: 80px;
+    text-align: justify;
 }
